fixed letter spacing and font sizes

--- a/components/card/card.less
+++ b/components/card/card.less
@@ -23,13 +23,10 @@
         flex-direction: column;
         justify-content: space-around;
         padding: 20px;
-        h3, h4{
-            font-size: 2rem;
-            color: @highlight-text-with-backgroud;
-        }
+        
         p {
             font-size: 1.6rem;
-            line-height: 1.2;
+            line-height: 1.4;
             color: @main-text-with-background;
             padding-top: 6%;
             padding-bottom: 6%;
