--- a/less/global.less
+++ b/less/global.less
@@ -22,12 +22,16 @@ h1 {
     color: @nonbackground-header-color;
 }
 h2 {
-    font-size: 2.4rem;
+    font-size: 3rem;
     color: @nonbackground-header-color;
+    letter-spacing: 3px;
 }
-h3 {
-    font-size: 2rem;
+h3, h4{
+    font-size: 2.3rem;
+    color: @highlight-text-with-backgroud;
+    letter-spacing: 2px;
 }
+
 html {
     font-size: 67.5%;
 }
